# rak4630-e-ink-claude

./: .clang-format  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  run-remediation.sh
.github/workflows/: ci.yml
device-profiles/: README.md  bosch-bme280.json  chirpstack_senseflow_decoder.js  compiled_sensors.json  gen_compiled_sensors.py  profile_to_blob.py  profile_to_decoder.py  profiles_to_catalog.py  validate_profiles.py
device-profiles/profiles/: bosch-bme280.json
docs/: 01-system-development-plan.md  02-data-flow.md  03-bringup-checklist.md  04-lorawan-chirpstack-fuota-plan.md  05-information-needed.md  06-resource-review.md  07-vscode-toolchain-setup.md  08-slot-recommendation.md  09-fuota-guide.md  10-display-layout.md  11-pin-mapping-rak3312-rak19007.md  11-pin-mapping-rak4630-rak19007.md  12-auto-provisioning-workflow.md  13-crm-sop-template-and-product-setup.md  15-dual-board-rak4630-rak3312.md  16-crm-integration-handoff.md  BRINGUP_PLAN.md  CHECKLIST_GATES_0_TO_9.md  CTO_CODEX_MULTI_AGENT_SUPER_PROMPT_TEMPLATE.md  CTO_CODEX_MULTI_AGENT_SUPER_PROMPT_TEMPLATE_ARCH_MODEL.md  GATE_EXECUTION_LOG.md  GATE_RUN_INSTRUCTIONS.md  GATE_TRANSITION_HANDSHAKE.md  REMEDIATION_RUNBOOK.md  SYSTEM_ARCHITECTURE.md  TEMPLATE_USAGE_AND_NEXT_STEP_PROMPT.md  TROUBLESHOOTING_SKILLS.md  USERINSTRUCTION_GATES.md
examples/gates/: README.md  (+21 more)
firmware/: .env.example  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.lora-smoke
firmware/main/: CMakeLists.txt  EspHalS3.h  Kconfig.projbuild  app_gate.c  app_gate.h  app_main.c  app_payload.c  app_payload.h  buttons.c  buttons.h  display_epd_ssd1680.c  display_epd_ssd1680.h  display_font_5x7.h  display_rows.c  display_rows.h  display_service.c  display_service.h  gate_id_map.c  gate_id_map.h  gpio_remap.h  heartbeat.c  heartbeat.h  i2c_bus.c  i2c_bus.h  idf_component.yml  lora.cpp  lora.h  lora_credentials.h.example  lorawan_service.c  lorawan_service.h  profile_reader.c  profile_reader.h  profile_store.c  profile_store.h  prov_console.cpp  prov_console.h  provisioning.c  provisioning.h  sensor_service.c  sensor_service.h
pio/: platformio.ini
scripts/: flash.sh
tests/host/: CMakeLists.txt  device_profile_test.c  gate_id_map_test.c  gen_bme280_blob.c  payload_encode_test.c  run_tests.sh
tools/: package_artifact.sh  provision-node.sh  provision_creds.py  serial_capture.py
(+53 files in other folders)
