idf_component_register(
    SRCS
        "app_main.c"
        "app_gate.c"
        "gate_id_map.c"
        "app_payload.c"
        "heartbeat.c"
        "i2c_bus.c"
        "sensor_service.c"
        "display_service.c"
        "display_epd_ssd1680.c"
        "lorawan_service.c"
        "lora.cpp"
        "prov_console.cpp"
        "provisioning.c"
        "profile_store.c"
        "profile_reader.c"
        "sensirion_gas_index_algorithm.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        driver esp_system esp_timer esp_driver_gpio nvs_flash console jgromes__radiolib
        device_profile
)
